--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -2,6 +2,6 @@
   <div class="logo">NEWWORD</div>
   <div class="actions">
     <button mat-icon-button><mat-icon>notifications</mat-icon></button>
-    <img src="assets/avatar.png" class="avatar" />
+    <img src="https://anhcuoiviet.vn/wp-content/uploads/2022/11/avatar-dep-dang-yeu-nu-5.jpg" class="avatar" />
   </div>
 </div>
