--- a/src/app/dialog/sign-in/sign-in.component.html
+++ b/src/app/dialog/sign-in/sign-in.component.html
@@ -1,1 +1,23 @@
-<p>sign-in works!</p>
+<div class="signin-container">
+  <div class="signin-card">
+    <img class="avatar" src="https://anhcuoiviet.vn/wp-content/uploads/2022/11/avatar-dep-dang-yeu-nu-5.jpg" alt="Avatar" />
+    <h3>Welcome back</h3>
+    <h2>Sign in now!</h2>
+
+    <form>
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Enter your email" type="email" />
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Password</mat-label>
+        <input matInput placeholder="Enter your password" type="password" />
+      </mat-form-field>
+
+      <button mat-flat-button color="primary" class="continue-btn">
+        Sign In <mat-icon>arrow_forward</mat-icon>
+      </button>
+    </form>
+  </div>
+</div>
