--- a/src/app/pages/admin/management-room/management-room.component.html
+++ b/src/app/pages/admin/management-room/management-room.component.html
@@ -1,1 +1,74 @@
-<p>management-room works!</p>
+<mat-sidenav-container class="layout-container">
+  <mat-sidenav mode="side" opened class="sidenav">
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
+
+  <mat-sidenav-content class="main-content">
+    <app-topbar></app-topbar>
+
+    <div class="toolbar">
+      <h2>Room Management</h2>
+      <div class="toolbar-actions">
+        <mat-form-field appearance="outline" class="search-field">
+          <mat-label>Search Room</mat-label>
+          <input matInput type="text" [(ngModel)]="searchTerm">
+          <button mat-icon-button matSuffix>
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <table mat-table [dataSource]="filteredData" class="mat-elevation-z1" matSort>
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="masterToggle()"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="selection.toggle(row)"
+            [checked]="selection.isSelected(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef>Room Picture</th>
+        <td mat-cell *matCellDef="let row">
+          <img [src]="row.image" width="100" height="60" />
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Room Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef>Room creation date</th>
+        <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'shortDate' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="members">
+        <th mat-header-cell *matHeaderCellDef>Active members</th>
+        <td mat-cell *matCellDef="let row">{{ row.members }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="viewRoomDetail(row)"></tr>
+    </table>
+
+    <mat-paginator [length]="filteredData.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]">
+    </mat-paginator>
+  </mat-sidenav-content>
+</mat-sidenav-container>
