--- a/src/app/pages/admin/management-event/management-event.component.html
+++ b/src/app/pages/admin/management-event/management-event.component.html
@@ -1,90 +1,106 @@
 
-<app-topbar></app-topbar>
+<app-topbar (menuClick)="toggleSidebar()"></app-topbar>
 
-<mat-sidenav-container class="layout-container">
-  <mat-sidenav mode="side" opened class="sidenav">
-    <app-sidebar></app-sidebar>
-  </mat-sidenav>
+<div class="main-wrapper">
+  <mat-sidenav-container class="layout-container">
+    <mat-sidenav mode="side" [opened]="sidebarOpen">
+      <app-sidebar [open]="sidebarOpen"></app-sidebar>
+    </mat-sidenav>
 
-  <mat-sidenav-content class="main-content management-container">
-    <div class="toolbar">
-      <h2>Event Management</h2>
-      <button mat-stroked-button color="accent" routerLink="/create-event">
-        <mat-icon>add</mat-icon>
-        Create Event
-      </button>
-    </div>
+    <mat-sidenav-content class="main-content">
+      <div class="toolbar">
+        <h2>Event Management</h2>
+        <button mat-stroked-button color="accent" routerLink="/create-event">
+          <mat-icon>add</mat-icon>
+          Create Event
+        </button>
+      </div>
 
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" matSort>
+      <mat-form-field appearance="outline" class="search-field">
+        <mat-label>Search</mat-label>
+        <input matInput [(ngModel)]="searchTerm" placeholder="Search event..." />
+        <button mat-icon-button matSuffix><mat-icon>search</mat-icon></button>
+      </mat-form-field>
 
-      <!-- Checkbox -->
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox
-            (change)="masterToggle()"
-            [checked]="selection.hasValue() && isAllSelected()"
-            [indeterminate]="selection.hasValue() && !isAllSelected()">
-          </mat-checkbox>
-        </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox
-            (click)="$event.stopPropagation()"
-            (change)="selection.toggle(row)"
-            [checked]="selection.isSelected(row)">
-          </mat-checkbox>
-        </td>
-      </ng-container>
+      <table mat-table [dataSource]="filteredData" matSort class="mat-elevation-z1">
 
-      <!-- Image -->
-      <ng-container matColumnDef="image">
-        <th mat-header-cell *matHeaderCellDef>Event Picture</th>
-        <td mat-cell *matCellDef="let row">
-          <img [src]="row.image" width="100" height="60" />
-        </td>
-      </ng-container>
+        <!-- Columns: Select, Image, Name, etc. -->
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox
+              (change)="masterToggle()"
+              [checked]="isAllSelected()"
+              [indeterminate]="selection.hasValue() && !isAllSelected()"></mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox
+              (click)="$event.stopPropagation()"
+              (change)="selection.toggle(row)"
+              [checked]="selection.isSelected(row)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
 
-      <!-- Name -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Event Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-      </ng-container>
+        <ng-container matColumnDef="image">
+          <th mat-header-cell *matHeaderCellDef>Image</th>
+          <td mat-cell *matCellDef="let row">
+            <img [src]="row.image" width="100" height="60" />
+          </td>
+        </ng-container>
 
-      <!-- Description -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
-      </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Event</th>
+          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+        </ng-container>
 
-      <!-- Register Start -->
-      <ng-container matColumnDef="registerStart">
-        <th mat-header-cell *matHeaderCellDef>Registration start date</th>
-        <td mat-cell *matCellDef="let row">{{ row.registerStart | date:'shortDate' }}</td>
-      </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+        </ng-container>
 
-      <!-- Register End -->
-      <ng-container matColumnDef="registerEnd">
-        <th mat-header-cell *matHeaderCellDef>Registration end date</th>
-        <td mat-cell *matCellDef="let row">{{ row.registerEnd | date:'shortDate' }}</td>
-      </ng-container>
+        <ng-container matColumnDef="registerStart">
+          <th mat-header-cell *matHeaderCellDef>Start</th>
+          <td mat-cell *matCellDef="let row">{{ row.registerStart | date:'shortDate' }}</td>
+        </ng-container>
 
-      <!-- Event Date -->
-      <ng-container matColumnDef="eventDate">
-        <th mat-header-cell *matHeaderCellDef>Event date</th>
-        <td mat-cell *matCellDef="let row">{{ row.eventDate | date:'shortDate' }}</td>
-      </ng-container>
+        <ng-container matColumnDef="registerEnd">
+          <th mat-header-cell *matHeaderCellDef>End</th>
+          <td mat-cell *matCellDef="let row">{{ row.registerEnd | date:'shortDate' }}</td>
+        </ng-container>
 
-      <!-- Participants -->
-      <ng-container matColumnDef="participants">
-        <th mat-header-cell *matHeaderCellDef>Number of participants</th>
-        <td mat-cell *matCellDef="let row">{{ row.participants }}</td>
-      </ng-container>
+        <ng-container matColumnDef="eventDate">
+          <th mat-header-cell *matHeaderCellDef>Event Date</th>
+          <td mat-cell *matCellDef="let row">{{ row.eventDate | date:'shortDate' }}</td>
+        </ng-container>
 
-      <!-- Render rows -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
 
-    <mat-paginator [length]="dataSource.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]">
-    </mat-paginator>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+        <ng-container matColumnDef="participants">
+          <th mat-header-cell *matHeaderCellDef>Participants</th>
+          <td mat-cell *matCellDef="let row">{{ row.participants }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="openEditDialog(row)">
+                <mat-icon>edit</mat-icon>
+                <span>Modify</span>
+              </button>
+              <button mat-menu-item (click)="deleteEvent(row)">
+                <mat-icon>delete</mat-icon>
+                <span>Delete</span>
+              </button>
+            </mat-menu>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator [length]="filteredData.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
