--- a/src/app/pages/admin/management-room/management-room.component.html
+++ b/src/app/pages/admin/management-room/management-room.component.html
@@ -1,75 +1,97 @@
-<app-topbar></app-topbar>
+<app-topbar (menuClick)="toggleSidebar()"></app-topbar>
+
 <mat-sidenav-container class="layout-container">
-  <mat-sidenav mode="side" opened class="sidenav">
-    <app-sidebar></app-sidebar>
+  <mat-sidenav mode="side" [opened]="sidebarOpen" class="sidenav">
+    <app-sidebar [open]="sidebarOpen"></app-sidebar>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <!-- Main Content -->
-    <div class="main-content">
-      <div class="toolbar">
-        <h2>Room Management</h2>
-        <div class="toolbar-actions">
-          <mat-form-field appearance="outline" class="search-field">
-            <mat-label>Search Room</mat-label>
-            <input matInput type="text" [(ngModel)]="searchTerm">
-            <button mat-icon-button matSuffix>
-              <mat-icon>search</mat-icon>
-            </button>
-          </mat-form-field>
-        </div>
-      </div>
 
-      <table mat-table [dataSource]="filteredData" class="mat-elevation-z1" matSort>
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox
-              (change)="masterToggle()"
-              [checked]="selection.hasValue() && isAllSelected()"
-              [indeterminate]="selection.hasValue() && !isAllSelected()">
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let row">
-            <mat-checkbox
-              (click)="$event.stopPropagation()"
-              (change)="selection.toggle(row)"
-              [checked]="selection.isSelected(row)">
-            </mat-checkbox>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="image">
-          <th mat-header-cell *matHeaderCellDef>Room Picture</th>
-          <td mat-cell *matCellDef="let row">
-            <img [src]="row.image" width="100" height="60" />
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Room Name</th>
-          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef>Description</th>
-          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef>Creation Date</th>
-          <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'shortDate' }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="members">
-          <th mat-header-cell *matHeaderCellDef>Active Members</th>
-          <td mat-cell *matCellDef="let row">{{ row.members }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="viewRoomDetail(row)"></tr>
-      </table>
-
-      <mat-paginator [length]="filteredData.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]">
-      </mat-paginator>
+  <mat-sidenav-content
+    class="main-content management-container"
+    [ngClass]="{ 'content-area-expanded': !sidebarOpen }">
+    <div class="toolbar">
+      <h2>Room Management</h2>
+      <button mat-stroked-button color="accent" routerLink="/create-room">
+        <mat-icon>add</mat-icon>
+        Create Room
+      </button>
     </div>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" matSort>
+      <!-- Checkbox -->
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="masterToggle()"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="selection.toggle(row)"
+            [checked]="selection.isSelected(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <!-- Image -->
+      <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef>Room Picture</th>
+        <td mat-cell *matCellDef="let row">
+          <img [src]="row.image" width="100" height="60" />
+        </td>
+      </ng-container>
+
+      <!-- Name -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Room Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+
+      <!-- Description -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+      </ng-container>
+
+      <!-- Created At -->
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef>Created At</th>
+        <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'shortDate' }}</td>
+      </ng-container>
+
+      <!-- Members -->
+      <ng-container matColumnDef="members">
+        <th mat-header-cell *matHeaderCellDef>Active Members</th>
+        <td mat-cell *matCellDef="let row">{{ row.members }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button [matMenuTriggerFor]="roomMenu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #roomMenu="matMenu">
+            <button mat-menu-item (click)="editRoom(row)">
+              <mat-icon>edit</mat-icon>
+              <span>Modify</span>
+            </button>
+            <button mat-menu-item (click)="deleteRoom(row)">
+              <mat-icon>delete</mat-icon>
+              <span>Delete</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <!-- Render rows -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [length]="dataSource.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]">
+    </mat-paginator>
   </mat-sidenav-content>
 </mat-sidenav-container>
